<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/searchFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.dmitrychukhnenko.animetracker.presentation.search.SearchFragment"
        android:label="@string/title_search">
        <action
            android:id="@+id/action_search_to_detail"
            app:destination="@id/detailFragment">
            <argument
                android:name="titleId"
                app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/listFragment"
        android:name="com.dmitrychukhnenko.animetracker.presentation.list.ListFragment"
        android:label="@string/title_my_list">
        <action
            android:id="@+id/action_list_to_detail"
            app:destination="@id/detailFragment">
            <argument
                android:name="titleId"
                app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.dmitrychukhnenko.animetracker.presentation.detail.DetailFragment"
        android:label="@string/title_details">
        <argument
            android:name="titleId"
            app:argType="integer" />
    </fragment>
</navigation>